welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:17: error: not found: value x
  x=Tx(i)
  ^golomb:18: error: not found: value y
  y=Ty(i)
  ^golomb:19: error: not found: value ind
  ind=i+1
  ^golomb:21: error: not found: value y
  for (j<-1 to (y)) {
                ^golomb:23: error: not found: value ind
      Ty(pointeur)=ind
                   ^